--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,15 +16,17 @@ option(MOVEMENTGRAPH_IS_REMOTE
 
 # Create a list of source files
 set(_srcs
-        movementgraph.cpp
-        edge.cpp
         vertex.cpp
-        movementgraph.h
-        edge.h
+        edge.cpp
+        primalgraph.cpp
+        kernelgraph.cpp
+        graphcreator.cpp
         vertex.h
+        edge.h
+        primalgraph.h
+        kernelgraph.h
+        graphcreator.h
         main.cpp
-        graph.cpp
-        graph.h
         )
 
 if(MOVEMENTGRAPH_IS_REMOTE)
@@ -35,16 +37,16 @@ if(MOVEMENTGRAPH_IS_REMOTE)
     add_definitions( " -DMOVEMENTGRAPH_IS_REMOTE ")
 
     # Create an executable
-    qi_create_bin(movementgraph ${_srcs})
+    qi_create_bin(graphcreator ${_srcs})
 else()
     # Create a plugin, that is a shared library, and make
     # sure it is built in lib/naoqi, so that the naoqi executable
     # can find it later
-    qi_create_lib(movementgraph SHARED ${_srcs} SUBFOLDER naoqi)
+    qi_create_lib(graphcreator SHARED ${_srcs} SUBFOLDER naoqi)
 endif()
 
 # Tell CMake that sayhelloworld depends on ALCOMMON and
 # ALPROXIES.
 # This will set the libraries to link sayhelloworld with,
 # the include paths, and so on
-qi_use_lib(movementgraph ALCOMMON ALPROXIES)
+qi_use_lib(graphcreator ALCOMMON ALPROXIES)
