--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(qibuild)
 # as a remote executable, or as a local shared library
 option(MOVEMENTGRAPH_IS_REMOTE
         "module is compiled as a remote module (ON or OFF)"
-        ON)
+        OFF)
 
 # Create a list of source files
 set(_srcs
@@ -21,7 +21,7 @@ set(_srcs
         edge.cpp
         primalgraph.cpp
         kernelgraph.cpp
-        graphcreator.cpp
+        movementgraph.cpp
         main.cpp
         )
 
@@ -33,16 +33,16 @@ if(MOVEMENTGRAPH_IS_REMOTE)
     add_definitions( " -DMOVEMENTGRAPH_IS_REMOTE ")
 
     # Create an executable
-    qi_create_bin(graphcreator ${_srcs})
+    qi_create_bin(movementgraph ${_srcs})
 else()
     # Create a plugin, that is a shared library, and make
     # sure it is built in lib/naoqi, so that the naoqi executable
     # can find it later
-    qi_create_lib(graphcreator SHARED ${_srcs} SUBFOLDER naoqi)
+    qi_create_lib(movementgraph SHARED ${_srcs} SUBFOLDER naoqi)
 endif()
 
 # Tell CMake that sayhelloworld depends on ALCOMMON and
 # ALPROXIES.
 # This will set the libraries to link sayhelloworld with,
 # the include paths, and so on
-qi_use_lib(graphcreator ALCOMMON ALPROXIES)
+qi_use_lib(movementgraph ALCOMMON ALPROXIES)
