Add some changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
 
 # Define the name of the project
-project(movementgraph)
+project(graphcreator)
 
 # This include enable you to use qibuild framework
 find_package(qibuild)
@@ -12,7 +12,7 @@ find_package(qibuild)
 # as a remote executable, or as a local shared library
 option(MOVEMENTGRAPH_IS_REMOTE
         "module is compiled as a remote module (ON or OFF)"
-        OFF)
+        ON)
 
 # Create a list of source files
 set(_srcs
@@ -21,17 +21,21 @@ set(_srcs
         edge.cpp
         primalgraph.cpp
         kernelgraph.cpp
-        movementgraph.cpp
+        graphcreator.cpp
         main.cpp
         )
 
-# Create a plugin, that is a shared library, and make
-# sure it is built in lib/naoqi, so that the naoqi executable
-# can find it later
-qi_create_lib(movementgraph SHARED ${_srcs} SUBFOLDER naoqi)
+# Add a compile flag because code changes a little bit
+# when we are compiling an executable
+# This will let you use #ifdef HELLOWORLD_IS_REMOTE
+# in the C++ code
+add_definitions( " -DMOVEMENTGRAPH_IS_REMOTE ")
+
+# Create an executable
+qi_create_bin(graphcreator ${_srcs})
 
 # Tell CMake that sayhelloworld depends on ALCOMMON and
 # ALPROXIES.
 # This will set the libraries to link sayhelloworld with,
 # the include paths, and so on
-qi_use_lib(movementgraph ALCOMMON ALPROXIES)
+qi_use_lib(graphcreator ALCOMMON ALPROXIES)
